<resources>
    <string name="app_name">Calculator</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="key_dot">.</string>
    <string name="key_divide">/</string>
    <string name="key_multiply">X</string>
    <string name="key_subtraction">-</string>
    <string name="key_add">+</string>
    <string name="key_result">=</string>
    <string name="key_clear_result">C</string>
    <string name="key_parentheses">()</string>
    <string name="key_percent">%</string>
    <string name="key_plus_minus">+/-</string>
    <string name="my_cool_style">My cool style</string>
    <string name="material_light" translatable="false">Material light</string>
    <string name="material_light_action_bar_dark" translatable="false">Material light action bar dark</string>
    <string name="material_dark" translatable="false">Material dark</string>
    <string name="text_change_theme" translatable="false">Change theme</string>
</resources>