<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp">
    <!-- поле результата -->
    <TextView
        android:id="@+id/resultField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="1"
        android:textSize="58sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <!-- поле ввода чисел -->
    <TextView
        android:id="@+id/numberField"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/resultField"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/firstButtonPanel"
        />

    <LinearLayout
        android:id="@+id/firstButtonPanel"
        style="@style/LinearLayouts"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/secondButtonPanel">
        <Button
            style="@style/StyleButton"
            android:text="@string/key_clear_result"
            />
        <Button
            style="@style/StyleButton"
            android:text="@string/key_parentheses"
            />
        <Button
            style="@style/StyleButton"
            android:text="@string/key_persent"
            />
        <Button
            style="@style/StyleButton"
            android:text="@string/key_divide"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondButtonPanel"
        style="@style/LinearLayouts"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/thirdButtonPanel">
        <Button
            style="@style/StyleButton"
            android:text="@string/key_7"/>
        <Button
            style="@style/StyleButton"
            android:text="@string/key_8"/>
        <Button
            style="@style/StyleButton"
            android:text="@string/key_9"
            />
        <Button
            style="@style/StyleButton"
            android:text="@string/key_multiply"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/thirdButtonPanel"
        style="@style/LinearLayouts"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/forthButtonPanel">
        <Button
            style="@style/StyleButton"
            android:text="@string/key_4"
            />
        <Button
            style="@style/StyleButton"
            android:text="@string/key_5"
            />
        <Button
            style="@style/StyleButton"
            android:text="@string/key_6"
            />
        <Button
            style="@style/StyleButton"
            android:text="@string/key_subtraction"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/forthButtonPanel"
        style="@style/LinearLayouts"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fiveButtonPanel">
        <Button
            style="@style/StyleButton"
            android:text="@string/key_1"
            />
        <Button
            style="@style/StyleButton"
            android:text="@string/key_2"
            />
        <Button
            style="@style/StyleButton"
            android:text="@string/key_3"/>
        <Button
            style="@style/StyleButton"
            android:text="@string/key_add"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/fiveButtonPanel"
        style="@style/LinearLayouts"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <Button
            style="@style/StyleButton"
            android:text="@string/key_plus_minus"
            />
        <Button
            style="@style/StyleButton"
            android:text="@string/key_0"
            />
        <Button
            style="@style/StyleButton"
            android:text="@string/key_dot"/>
        <Button
            style="@style/StyleButton"
            android:text="@string/key_result"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>