<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:textSize="@dimen/text_size_result"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/calculation"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="fill_vertical"
            android:textSize="@dimen/text_size_result"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result"
            app:layout_constraintBottom_toTopOf="@+id/bt1"
            />

        <ImageButton
            android:id="@+id/bt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_clear_result"
            android:maxWidth="15dp"
            android:maxHeight="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/bt2"
            app:layout_constraintBottom_toTopOf="@id/GL"
            />

        <ImageButton
            android:id="@+id/bt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_parentheses"
            app:layout_constraintStart_toEndOf="@id/bt1"
            app:layout_constraintEnd_toStartOf="@id/bt3"
            app:layout_constraintBottom_toBottomOf="@id/bt1"
            />

        <ImageButton
            android:id="@+id/bt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_persent"
            app:layout_constraintStart_toEndOf="@id/bt2"
            app:layout_constraintEnd_toStartOf="@id/bt4"
            app:layout_constraintBottom_toBottomOf="@id/bt1"

            />

        <ImageButton
            android:id="@+id/bt4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_dot"
            app:layout_constraintStart_toEndOf="@+id/bt3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/bt1"
            />

        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/GL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:useDefaultMargins="true">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/key_clear_result"
                
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/key_parentheses"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/key_persent"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/key_divide"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/key_7"
                
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:text="@string/key_8" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:text="@string/key_9" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:text="@string/key_multiply" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:text="@string/key_4"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:text="@string/key_5" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:text="@string/key_6" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:text="@string/key_subtraction" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:text="@string/key_1"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:text="@string/key_2" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:text="@string/key_3" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:text="@string/key_add" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:text="@string/key_plus_minus" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:text="@string/key_0"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:text="@string/key_dot" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/key_result" />

        </GridLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>